--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ header {
 }
 
 header .container {
-  display: flex;
+  display: right;
   justify-content: space-between;
   align-items: center;
   color: black;
@@ -77,7 +77,7 @@ header .logo {
 
 header nav ul {
   list-style: none;
-  display: flex;
+  display: right;
   gap: 10px;
   color: #f2c9d3;
 }
