--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 .container{
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   background-image: url(Mybackground.png);
   background-size: cover;
@@ -16,6 +16,8 @@
 .content {
   width: 100%;
   margin: auto;
+  position: relative;
+  z-index: 2;
 }
 
 .content .logo {
@@ -25,39 +27,82 @@
 
 .content hr {
   border: none;
-  height: 6px;
-  max-width: 280px;
-  marging-top: 8px;
-  background: #ffalal;
+  height: 4px;
+  width: 350px;
+  margin-top: 8px;
+  background: #345e7d;
+  
 }
 
 .content h1{
-  font-size: 180px;
+  font-size: 50px;
   font-weight: 100;
-  color: #cfcfcf;
+  color: #345e7d;
   margin-top: 60px;
   margin-bottom: 30px;
-  letter-spacing: 4px;
-  line-height: 160px;
+  letter-spacing: 2px;
+  line-height: 35px;
+  
+}
+.content p {
+  max-width: 350px;
+  color; #2b4257;
+  letter-spacing: 1px;
+  font-size: 20px;
+}
+
+.sidebar {
+  width: 100%;
+  height: 170px;
+  background: rgba(0,0,0,0.8);
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  backdrop-filter: blur(1px);
 }
 
 
+.container2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: black;
+}
 
 
+nav ul {
+  list-style: none;
+  display: flex;
+  gap: 10px;
+  color: #f2c9d3;
+}
 
+nav ul li a {
+  text-decoration: none;
+  color: #345e7d; 
+  font-size: 0.8em;
+  transition: all 0.3s ease;
+  border: 2px solid #345e7d;
+  padding: 8px 15px;
+  border-radius: 25px;
+  display: inline-block;
+  margin-top: 10px;
+  background-color: transparent;
+}
 
+nav ul li a:hover {
+  color: #fff;
+  background-color: #345e7d;
+  border-color: #345e7d;
+  transform: scale(1.05);
+  text-decoration: underline;
+}
 
-
-
-
-
-
-
-
-
-
-
-
+h3 {
+  font-size: 20px;
+  font-weight: bold;
+  color: #345e7d;
+}
 
 
 
