--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: san-serif;
+  box-sizing: border-box;
 }
 
 .container{
@@ -11,6 +12,7 @@
   background-size: cover;
   background-position: center;
   position: relative;
+  padding: 20px;
 }
 
 .content {
@@ -21,7 +23,8 @@
 }
 
 .content .logo {
-  width: 40%;
+  width: 200px;
+  max-width: 40%
   margin-top: px;
 }
 
@@ -35,20 +38,22 @@
 }
 
 .content h1{
-  font-size: 50px;
+  font-size: 3rem;
   font-weight: 100;
   color: #345e7d;
   margin-top: 60px;
   margin-bottom: 30px;
   letter-spacing: 2px;
-  line-height: 35px;
+  line-height: 1.2;
   
 }
 .content p {
-  max-width: 350px;
+  max-width: 600px;
+  width: 100%;
   color; #2b4257;
   letter-spacing: 1px;
-  font-size: 20px;
+  font-size: 1rem;
+  text-align: justify;
 }
 
 .sidebar {
@@ -57,6 +62,7 @@
   background: rgba(0,0,0,0.8);
   position: absolute;
   top: 0;
+  right: 0;
   z-index: 1;
   backdrop-filter: blur(1px);
 }
@@ -102,6 +108,10 @@ h3 {
   font-size: 20px;
   font-weight: bold;
   color: #345e7d;
+}
+
+br {
+  font-size: 20px;
 }
 
 
