--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@
 
 .content hr {
   border: none;
-  height: 4px;
-  width: 350px;
+  height: 0.8vw;
+  width: 100%;
   margin-top: 8px;
   background: #345e7d;
   
@@ -113,8 +113,6 @@ h3 {
 br {
   font-size: 20px;
 }
-
-
 
 
 
