--- a/components.css
+++ b/components.css
@@ -125,3 +125,87 @@ br {
   color: white;
   text-align: center;
 }
+
+.content2 {
+  background-color: #345e7d;
+  width: 500px;
+  border: 7px solid #233e52;
+  padding: 60px;
+  margin: 20px;
+  align: center;
+  border-radius: 15px;
+  color: white;
+  text-align: center;
+}
+
+.content3 {
+  background-color: #345e7d;
+  width: 500px;
+  border: 7px solid #233e52;
+  padding: 60px;
+  margin: 20px;
+  align: center;
+  border-radius: 15px;
+  color: white;
+  text-align: center;
+}
+
+.content4 {
+  background-color: #345e7d;
+  width: 500px;
+  border: 7px solid #233e52;
+  padding: 60px;
+  margin: 20px;
+  align: center;
+  border-radius: 15px;
+  color: white;
+  text-align: center;
+}
+
+.content5 {
+  background-color: #345e7d;
+  width: 500px;
+  border: 7px solid #233e52;
+  padding: 60px;
+  margin: 20px;
+  align: center;
+  border-radius: 15px;
+  color: white;
+  text-align: center;
+}
+
+.content6 {
+  background-color: #345e7d;
+  width: 500px;
+  border: 7px solid #233e52;
+  padding: 60px;
+  margin: 20px;
+  align: center;
+  border-radius: 15px;
+  color: white;
+  text-align: center;
+}
+
+.content7 {
+  background-color: #345e7d;
+  width: 500px;
+  border: 7px solid #233e52;
+  padding: 60px;
+  margin: 20px;
+  align: center;
+  border-radius: 15px;
+  color: white;
+  text-align: center;
+}
+
+.content8 {
+  background-color: #345e7d;
+  width: 500px;
+  border: 7px solid #233e52;
+  padding: 60px;
+  margin: 20px;
+  align: center;
+  border-radius: 15px;
+  color: white;
+  text-align: center;
+}
