--- a/motherboards.css
+++ b/motherboards.css
@@ -59,7 +59,7 @@
 .sidebar {
   width: 100%;
   height: 170px;
-  background: linear-gradient(to bottom, rgba(0,0,0,0.5), transparent); /* Gradient for a smoother transition */
+  background: rgba(0,0,0,0.5); 
   position: absolute;
   top: 0;
   right: 0;
