--- a/casesandFF.css
+++ b/casesandFF.css
@@ -63,10 +63,9 @@
   position: absolute;
   top: 0;
   right: 0;
-  z-index: 1;
+  z-index: -1; /* Place it behind other elements */
   backdrop-filter: blur(1px);
 }
-
 
 .container2 {
   display: flex;
