--- a/components.css
+++ b/components.css
@@ -24,7 +24,7 @@
 
 .content .logo {
   width: 200px;
-  max-width: 40%
+  max-width: 40%;
   margin-top: px;
 }
 
@@ -63,10 +63,9 @@
   position: absolute;
   top: 0;
   right: 0;
-  z-index: 1;
+  z-index: -1; /* Place it behind other elements */
   backdrop-filter: blur(1px);
 }
-
 
 .container2 {
   display: flex;
